# clef

./: Cargo.toml  LICENSE  README.md
clef/: Cargo.toml  README.md
clef/src/: lib.rs
clef/src/math/: fraction.rs  mod.rs
clef/src/music/: duration.rs  mod.rs  pitch.rs  tune_sys.rs
